--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: #ffffff;
+  line-height: 1.5;
+  font-weight: 400;
 }
 
 html, body, #root {
@@ -12,4 +13,10 @@ html, body, #root {
   padding: 0;
   width: 100%;
   height: 100%;
+  background-color: white;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
 }
